source/blender/blenkernel/intern/cachefile.cc
@@ -128,7 +128,7 @@ IDTypeInfo IDType_ID_CF = {
     /*main_listbase_index*/ INDEX_ID_CF,
     /*struct_size*/ sizeof(CacheFile),
     /*name*/ "CacheFile",
-    /*name_plural*/ N_("cache files"),
+    /*name_plural*/ N_("cache_files"),
     /*translation_context*/ BLT_I18NCONTEXT_ID_CACHEFILE,
     /*flags*/ IDTYPE_FLAGS_APPEND_IS_REUSABLE,
     /*asset_type_info*/ nullptr,
