source/blender/blenkernel/intern/linestyle.cc
@@ -647,7 +647,7 @@ IDTypeInfo IDType_ID_LS = {
     /*main_listbase_index*/ INDEX_ID_LS,
     /*struct_size*/ sizeof(FreestyleLineStyle),
     /*name*/ "FreestyleLineStyle",
-    /*name_plural*/ N_("line styles"),
+    /*name_plural*/ N_("linestyles"),
     /*translation_context*/ BLT_I18NCONTEXT_ID_FREESTYLELINESTYLE,
     /*flags*/ IDTYPE_FLAGS_APPEND_IS_REUSABLE,
     /*asset_type_info*/ nullptr,
